Skip to content

cmake-gui: Lots of runtime warnings while typing a regex with parentheses in the Search bar

When I enter an opening parenthesis into cmake-gui's Search bar, it outputs hundreds? of identical warnings:

QString(View)::contains(): called on an invalid QRegularExpression object (pattern is '(')

Probably can be fixed by checking QRegularExpression::isValid() and not calling setFilterRegularExpression if that returns false.

Edited by Igor Kushnir
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information