cmake-gui: do not set search filter if regex is invalid

Fixes: #24248