Source/QtDialog/QCMakeCacheView.h
@@ -28,12 +28,13 @@ public:
 
   QSize sizeHint() const { return QSize(200, 200); }
 
+  // set the search filter string.  any property key or value not matching will
+  // be filtered out
+  bool setSearchFilter(const QString&);
+
 public slots:
   // set whether to show advanced entries
   void setShowAdvanced(bool);
-  // set the search filter string.  any property key or value not matching will
-  // be filtered out
-  void setSearchFilter(const QString&);
 
 protected:
   QModelIndex moveCursor(CursorAction, Qt::KeyboardModifiers);
